After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658583 - Crash in GnomeWallClock
Crash in GnomeWallClock
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: libgnome-desktop
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-08 16:59 UTC by Vincent Untz
Modified: 2011-09-09 06:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GnomeWallClock: Remove the date/time source on dispose (1.02 KB, patch)
2011-09-08 17:02 UTC, Vincent Untz
committed Details | Review

Description Vincent Untz 2011-09-08 16:59:03 UTC
gnome-screensaver keeps crashing for me:

Program received signal SIGSEGV, Segmentation fault.
0xb7f474b3 in update_clock (data=0x8171d00) at gnome-wall-clock.c:167
167     gnome-wall-clock.c: Aucun fichier ou dossier de ce type.
        in gnome-wall-clock.c
(gdb) bt
  • #0 update_clock
    at gnome-wall-clock.c line 167
  • #1 g_datetime_source_dispatch
    at gnome-datetime-source.c line 142
  • #2 g_main_context_dispatch
    from /usr/lib/libglib-2.0.so.0
  • #3 ??
    from /usr/lib/libglib-2.0.so.0
  • #4 g_main_loop_run
    from /usr/lib/libglib-2.0.so.0
  • #5 gtk_main
    from /usr/lib/libgtk-3.so.0
  • #6 main

Comment 1 Vincent Untz 2011-09-08 17:02:44 UTC
Created attachment 196013 [details] [review]
GnomeWallClock: Remove the date/time source on dispose

We don't do it in finalize since the dispose handler needs the objects
that are being disposed.
Comment 2 Colin Walters 2011-09-08 21:42:33 UTC
Review of attachment 196013 [details] [review]:

Makes sense.