GnomeWallClock: Remove the date/time source on dispose

We don't do it in finalize since the dispose handler needs the objects
that are being disposed.

https://bugzilla.gnome.org/show_bug.cgi?id=658583